--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.1",
     "cookie-parser": "^1.4.6",
@@ -18,7 +19,8 @@
     "mongoose": "^6.3.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "stripe": "^9.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
