--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
+    "socket.io": "^4.5.0",
     "stripe": "^9.1.0"
   },
   "devDependencies": {
