--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.7.5",
+    "nodemailer-smtp-transport": "^2.7.4",
     "socket.io": "^4.5.0",
     "stripe": "^9.1.0"
   },
